<resources>
    <string name="app_name">BandTools</string>

    <string name="title_section1">Sensor Data</string>
    <string name="title_section2">Customization</string>
    <string name="title_section3">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_HR">Enable HR</string>

    <string name="action_settings">Settings</string>
    <string name="ConnectionStatus">Connection Status</string>
    <string name="SkinTemperature">Skin Temperature</string>
    <string name="StepsTaken">Steps Taken</string>
    <string name="DistanceLabel">Distance Traveled</string>
    <string name="UVLevel">UV Level</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HeartRateLabel">Heart Rate</string>


    <string name="hello_world">Hello world!</string>
    <string name="SampleRateLabel">Sample Rate</string>
    <string name="SampleRateDescription">Choose the sampling rate for the Accelerometer and Gyrometer.</string>
    <string name="DataCollectionLabel">Data Collection</string>
    <string name="DataCollectionDetails">Select the number of seconds between writes for data logging.</string>
    <string name="PickImageButton">Pick Image</string>
    <string name="TempModeDesc">Select the unit you\'d like to view the Skin Temperature reading in.</string>
    <string name="SpeedLabel">Speed</string>
    <string name="PedModeTitle">Pedometer Mode</string>
</resources>
