<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="me.joelbraun.mbandtools.SettingsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SampleRateLabel"
        android:id="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/SampleRateDescription"
        android:id="@+id/textView7" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SampleRateSelect">
        <RadioButton android:layout_width="wrap_content"
            android:id="@+id/sample16" android:layout_height="wrap_content"
            android:checked="true" android:text="16 Samples/s"></RadioButton>
        <RadioButton android:id="@+id/sample32"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="32 Samples/s"></RadioButton>
        <RadioButton android:layout_width="wrap_content"
            android:id="@+id/sample128" android:layout_height="wrap_content"
            android:text="128 Samples/s (Default)"></RadioButton>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/DataCollectionLabel"
        android:id="@+id/DataCollectionLabel"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/DataCollectionDetails"
        android:id="@+id/DataCollectionDetails"
        android:layout_marginTop="2dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"></LinearLayout>

</LinearLayout>
